# ParticleSimulator

./: .gitignore  CMakeLists.txt  README.md  package-lock.json
include/particle_simulator/: app.hpp  cli.hpp  config.hpp  math.hpp  rendering.hpp  scenario.hpp  simulation.hpp
scenarios/: force_showcase.json  minimal_zero_gravity.json  obstacle_course.json  oscillator.json  solar_system.json  stress_test.json
src/: app.cpp  cli.cpp  config.cpp  main.cpp  rendering.cpp  simulation.cpp  web_server.cpp
tests/: config_tests.cpp  session_tests.cpp  simulation_tests.cpp
web/: package-lock.json  package.json  vite.config.ts
web/public/: help.html
web/src/: App.css  App.tsx  api.test.ts  api.ts  index.css  scenario.test.ts  scenario.ts  types.ts  webglRenderer.test.ts  webglRenderer.ts
